--- a/support/config/elasticmq/elasticmq.conf
+++ b/support/config/elasticmq/elasticmq.conf
@@ -34,6 +34,19 @@ queues {
         receiveMessageWait = 0 seconds
     }
 
+   mao-marketing-events {
+     defaultVisibilityTimeout = 10 seconds
+     delay = 5 seconds
+     fifo = false
+     receiveMessageWait = 0 seconds
+   }
+   mao-pricing-policy-events {
+     defaultVisibilityTimeout = 10 seconds
+     delay = 5 seconds
+     fifo = false
+     receiveMessageWait = 0 seconds
+   }
+
    dev-mao-order-events {                          
      defaultVisibilityTimeout = 10 seconds                    
      delay = 5 seconds         
